agregue redes sociales

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
                         <div class="col-sm-6 py-2"><h6>Teléfono: <span class="text-secondary">+569 5024 8178</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Email: <span class="text-secondary">raquelpazeyzaguirre@gmail.com</span></h6></div>
                         <div class="col-sm-6 py-2"><h6>Dirección: <span class="text-secondary">Enrique Soro, Independencia</span></h6></div>
+                        <div class="col-sm-6 py-2"><h6>RRSS: <span class="text-secondary">IG _re, X@re</span></h6></div>
                     </div>
                     <a href="" class="btn btn-outline-primary mr-4">Contrátame</a>
                     <a href="" class="btn btn-outline-primary">Conóceme</a>
